Fix CertificatesProvidersList items gap & selected bg

--- a/src/components/certificates-providers-list-item/styles/index.module.scss
+++ b/src/components/certificates-providers-list-item/styles/index.module.scss
@@ -29,7 +29,7 @@
 
   &.current_list_item {
     transition: none;
-    background-color: var(--pv-color-primary-tint-4);
+    background-color: var(--pv-color-primary-tint-5);
     cursor: default;
 
     .list_item_icon_wrapper svg circle {
