--- a/src/components/certificates-providers-list/styles/index.module.scss
+++ b/src/components/certificates-providers-list/styles/index.module.scss
@@ -10,7 +10,6 @@
   .list {
     display: flex;
     flex-direction: column;
-    gap: var(--pv-size-base);
   }
 }
 
